k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: academic-management
  labels:
    app.kubernetes.io/part-of: academic-management
    environment: lab
